# api-server-template

./: .gitignore  AXUM.env.template  Cargo.toml  README.md  TODO.md
migrations/: 20250128101043_create_tables.sql  users.sql
src/: main.rs  routers.rs
src/config/: environment.rs  mod.rs
src/custom/: macros.rs  mod.rs  validators.rs
src/database/: users.rs
src/definitions/: auth.rs  logging.rs  mod.rs  user.rs
src/middleware/: ignore_logs.rs  mod.rs
src/routes/: auth.rs  mod.rs  root.rs  users.rs
