[package]
name = "api-server-template"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.14.0", features = ["axum", "axum-json"] }
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
axum-keycloak-auth = "0.7.0"
axum-prometheus = "0.8.0"
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
schemars = { version = "0.8.21", features = ["uuid", "uuid1"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["serde"] }
